--- a/css/style.css
+++ b/css/style.css
@@ -471,6 +471,7 @@ h6,
 }
 
 .burger.active:before {
+  transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=5);
@@ -478,6 +479,7 @@ h6,
 }
 
 .burger.active:after {
+  transform: rotate(45deg);
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=-5);
