--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Poppins", monosapce;
   color: #1b1b1b;
+  background-color: whitesmoke;
 }
 
 a {
@@ -22,11 +23,11 @@ h6,
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 4.5rem;
 }
 
 .site-section {
-  padding: 7rem 0;
+  padding: 2rem;
 }
 
 .filters a {
@@ -531,4 +532,16 @@ h1 {
     padding-right: 0;
     padding-left: 0;
   }
+}
+
+/* Parallax image on landing */
+
+#parallax {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-image: url("layer-3-01.png"), url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-2.png), url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position: 50% 50%;
 }
