--- a/css/style.css
+++ b/css/style.css
@@ -534,14 +534,9 @@ h1 {
   }
 }
 
-/* Parallax image on landing */
+/* Landing */
 
-#parallax {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  background-image: url("layer-3-01.png"), url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-2.png), url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-1.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-position: 50% 50%;
+#hero {
+  padding-top: 6em;
+  padding-bottom: 5em;
 }
